--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,6 @@
 	"fundingUrl": {
 		"Buy Me a Coffee": "https://paypal.me/duocnguyen",
 		"Follow me": "https://twitter.com/duocdev"
-	}
+	},
+	"version": "0.0.27"
 }
