--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,1 @@
-{
-	"id": "Obsidian AI",
-	"name": "Obsidian AI",
-	"minAppVersion": "0.15.0",
-	"description": "Embed any website to Obsidian, you have anything you need in one place. You can browse website and take notes at the same time. e.g. Ask ChatGPT and copy the answer directly to your note.",
-	"author": "duocnv",
-	"authorUrl": "https://twitter.com/duocdev",
-	"fundingUrl": {
-		"Buy Me a Coffee": "https://paypal.me/duocnguyen",
-		"Follow me": "https://twitter.com/duocdev"
-	},
-	"version": "0.0.28"
-}
+wÝõëŽ´q÷»ußãŽùå·ôç—<ë\×};ÑÍÞ
